opam-version: "2.0"
synopsis: "Approximate 1D histograms"
description:
  "Bentov implements an algorithm which approximates a 1D histogram in a streaming fashion."
maintainer: ["mika@illouz.net"]
authors: ["Mika Illouz"]
license: "BSD"
homepage: "https://github.com/barko/bentov"
bug-reports: "https://github.com/barko/bentov/issues"
depends: [
  "dune" {> "1.5"}
  "cmdliner" {>= "1.0.4"}
  "gsl" {>= "1.24.1"}
]
build: [
  ["dune" "subst"] {pinned}
  [
    "dune"
    "build"
    "-p"
    name
    "-j"
    jobs
    "@install"
    "@runtest" {with-test}
    "@doc" {with-doc}
  ]
]

dev-repo: "git+https://github.com/barko/bentov.git"
